--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <RelativeLayout
         android:id="@+id/rl_activity_general_container"
         android:layout_height="match_parent"
@@ -17,18 +17,7 @@
             android:id="@+id/images_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:layout_below="@id/searchView">
-
-        </android.support.v7.widget.RecyclerView>
-        <ProgressBar
-            android:id="@+id/network_progress"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:visibility="gone"
-            android:layout_margin="20dp"/>
+            android:layout_below="@id/searchView"/>
     </RelativeLayout>
 
 </layout>
